--- a/index.html
+++ b/index.html
@@ -22,23 +22,36 @@
     </div>
 
     <div foto id="foto">
-        <img id="carrousel" src="imagens/PHOTO_CARROUSEL.jpg">
+        <img id="carrousel" src="./imagens/PHOTO_CARROUSEL.jpg">
         <p id="titleCarrousel">Playstation2</p>
     </div>
 
     <div id="barSelection">
         <a>bah</a>
     </div>
-    <div id="bodyGallery">
+    <div class="bodyGallery">
         <!-- first line gallery -->
+        <div class="itemE">
+            <img id="imagemDestaque" src="./img/ffSk.svg">
 
-        <div class="item">
-            
-            
+            </img>
+        </div>
+        <div class="itemD">
+            <img id="imagemDestaque" src="./img/fsSk.svg">
 
+            </img>
+        </div>
+        <div class="itemE">
+            <img id="imagemDestaque" src="./img/sfSk.svg">
+
+            </img>
         </div>
 
+        <div class="itemD">
+            <img id="imagemDestaque" src="./img/ssSk.svg">
 
+            </img>
+        </div>
 
     </div>
     <div id="spacament">&nbsp;</div>
