galeria com descricao

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div foto id="foto">
         <img id="carrousel" src="./imagens/PHOTO_CARROUSEL.jpg">
-        <p id="titleCarrousel">Playstation2</p>
+        <p id="titleCarrousel">Playstation5</p>
     </div>
 
     <div id="barSelection">
@@ -31,27 +31,32 @@
     </div>
     <div class="bodyGallery">
         <!-- first line gallery -->
-        <div class="itemE">
-            <img id="imagemDestaque" src="./img/ffSk.svg">
+        <a href="https://www.mercadolivre.com.br/microsoft-xbox-series-x-1tb-standard-cor-preto/p/MLB16160759?pdp_filters=category:MLB11172#searchVariation=MLB16160759&position=2&search_layout=grid&type=product&tracking_id=6f8071f1-e4af-454f-8346-a87699823931" class="itemE">
+            <img id="imagemDestaque" src="./img/ffSk.svg"></img>
+            <p class="title">XBOXSERIEX</p>
+            <p class="description">Console XBOX Serie X 512GB</p>
+            <p class="price">R$:100,00</p>
+        </a>
+        <a href="https://www.mercadolivre.com.br/sony-playstation-5-825gb-digital-edition-cor-branco-e-preto/p/MLB16253015?pdp_filters=category:MLB11172#searchVariation=MLB16253015&position=4&search_layout=grid&type=product&tracking_id=0581c42a-1725-4e0e-be8b-c7814ce74feb" class="itemD">
+            <img id="imagemDestaque" src="./img/fsSk.svg"></img>
+            <p class="title">PLAYSTATION 5</p>
+            <p class="description">PC GAMER</p>
+            <p class="price">R$:100,00</p>
+        </a>
+        <a href="https://www.mercadolivre.com.br/nintendo-switch-32gb-standard-cor-vermelho-neon-azul-neon-e-preto/p/MLB8755483?pdp_filters=category:MLB11172#searchVariation=MLB8755483&position=14&search_layout=grid&type=product&tracking_id=e2fb95b3-daa0-4faa-bb72-276b758720f9" class="itemE">
+            <img id="imagemDestaque" src="./img/sfSk.svg"></img>
+            <p class="title">NINTENDO SWITCH</p>
+            <p class="description">PC GAMER</p>
+            <p class="price">R$:100,00</p>
+            
+        </a>
 
-            </img>
-        </div>
-        <div class="itemD">
-            <img id="imagemDestaque" src="./img/fsSk.svg">
-
-            </img>
-        </div>
-        <div class="itemE">
-            <img id="imagemDestaque" src="./img/sfSk.svg">
-
-            </img>
-        </div>
-
-        <div class="itemD">
-            <img id="imagemDestaque" src="./img/ssSk.svg">
-
-            </img>
-        </div>
+        <a href="https://produto.mercadolivre.com.br/MLB-2068594526-computador-gamer-intel-i5-11400f-16gb-gtx-1650-ssd-240gb-_JM#position=42&search_layout=grid&type=item&tracking_id=0e54aca6-58cf-4aad-9310-8ee3945d183e" class="itemD">
+            <img id="imagemDestaque" src="./img/ssSk.svg"></img>
+            <p class="title">PC GAMER</p>
+            <p class="description">PC GAMER</p>
+            <p class="price">R$:100,00</p>
+        </a>
 
     </div>
     <div id="spacament">&nbsp;</div>
