--- a/index.html
+++ b/index.html
@@ -127,5 +127,26 @@
             <img src="./imagens/qrcode.png" class="qrcodeFooter">
         </div>
     </div>
+    <div>
+        <form class="allSocialBtn">
+            <button class="buttonSocial">
+                <img src="./imagens/FACEBOOK.png" class="imagemSocial">
+            </button>
+            <button class="buttonSocial">
+                <img src="./imagens/INSTAGRAM.png" class="imagemSocial">
+            </button>
+            <button class="buttonSocial">
+                <img src="./imagens/LINKEDIN.png" class="imagemSocial">
+            </button>
+            <button class="buttonSocial">
+                <img src="./imagens/TELEGERAM.png" class="imagemSocial">
+            </button>
+            <button class="buttonSocial">
+                <img src="./imagens/EMAIL.png" class="imagemSocial">
+            </button>
+
+        </form>
+
+    </div>
 </body>
 </html>
