--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="logotop">
                 <div class="subDiv-topBtn">
                     <a href="https://google.com/">
-                        <img class="logo" src="imagens/LOGO.svg" alt="Logo">
+                        <img class="logo" src="./imagens/LOGO.svg" alt="Logo">
                     </a>
                 </div>
             </div>
