--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </form>
             <p id="titleCarrousel">Playstation4</p>
             <span style="width: 5%;"></span>
-            <img src="/imagens/itemCarrousel.jpg" class="imgCassousel">
+            <img src="./imagens/itemCarrousel.jpg" class="imgCassousel">
             <form class="buttonForm">
                 <button type="submit" s class="arrowButton" style="float:right">
                     <img src="./imagens/dir.png">
