--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="logotop">
                 <div class="subDiv-topBtn">
                     <a href="https://google.com/">
-                        <img class="logo" src="./imagens/LOGO.svg" alt="Logo">
+                        <img class="logo" src="./imagens/LOGO.svg">
                     </a>
                 </div>
             </div>
@@ -29,7 +29,7 @@
                     <a href="https://facebook.com/" class="iconTopLink">
                         <img src="./imagens/marketicon.png" class="iconTopImage">
                     </a>
-                    <a href="https://facebook.com/" class="iconTopLink">
+                    <a href="/login.html" class="iconTopLink">
                         <img src="./imagens/profileicon.png" class="iconTopImage">
                     </a>
                 </div>
@@ -37,15 +37,18 @@
         </div>
         <div class="divCarrousel">
             <form class="buttonForm">
-                <button type="submit" s class="arrowButton" style="float:left">
+                <button type="submit" class="arrowButton" style="float:left">
                     <img src="./imagens/esq.png">
                 </button>
             </form>
-            <p id="titleCarrousel">Playstation4</p>
+            <div class="divTextCarrousel">
+                <p id="titleCarrousel">Playstation</p>
+                <p class="DescCarrousel">Experimente Playstation4</p>
+            </div>
             <span style="width: 5%;"></span>
             <img src="./imagens/itemCarrousel.jpg" class="imgCassousel">
             <form class="buttonForm">
-                <button type="submit" s class="arrowButton" style="float:right">
+                <button type="submit" class="arrowButton" style="float:right">
                     <img src="./imagens/dir.png">
                 </button>
             </form>
@@ -67,7 +70,7 @@
         <!-- first line gallery -->
         <button type="submit"
             formaction="https://www.mercadolivre.com.br/microsoft-xbox-series-x-1tb-standard-cor-preto/p/MLB16160759?pdp_filters=category:MLB11172#searchVariation=MLB16160759&position=2&search_layout=grid&type=product&tracking_id=6f8071f1-e4af-454f-8346-a87699823931"
-            class="itemE">
+            class="itemE" id="itemDestaque">
             <img id="imagemDestaque" src="./img/ffSk.svg"></img>
             <h3 class="title">XBOXSERIEX</h3>
             <p class="description">Console XBOX Serie X 512GB</p>
@@ -75,7 +78,7 @@
         </button>
         <button type="submit"
             formaction="https://www.mercadolivre.com.br/sony-playstation-5-825gb-digital-edition-cor-branco-e-preto/p/MLB16253015?pdp_filters=category:MLB11172#searchVariation=MLB16253015&position=4&search_layout=grid&type=product&tracking_id=0581c42a-1725-4e0e-be8b-c7814ce74feb"
-            class="itemD">
+            class="itemD" id="itemDestaque">
             <img id="imagemDestaque" src="./img/fsSk.svg"></img>
             <h3 class="title">PLAYSTATION 5</h3>
             <p class="description">Console Playstation 5 512GB</p>
@@ -85,7 +88,7 @@
     <form class="bodyGallery">
         <button type="submit"
             formaction="https://www.mercadolivre.com.br/nintendo-switch-32gb-standard-cor-vermelho-neon-azul-neon-e-preto/p/MLB8755483?pdp_filters=category:MLB11172#searchVariation=MLB8755483&position=14&search_layout=grid&type=product&tracking_id=e2fb95b3-daa0-4faa-bb72-276b758720f9"
-            class="itemE">
+            class="itemE" id="itemDestaque">
             <img id="imagemDestaque" src="./img/sfSk.svg"></img>
             <h3 class="title">NINTENDO SWITCH</h3>
             <p class="description">Nintendo Switch 32GB</p>
@@ -93,7 +96,7 @@
         </button>
         <button type="submit"
             formaction="https://produto.mercadolivre.com.br/MLB-2068594526-computador-gamer-intel-i5-11400f-16gb-gtx-1650-ssd-240gb-_JM#position=42&search_layout=grid&type=item&tracking_id=0e54aca6-58cf-4aad-9310-8ee3945d183e"
-            class="itemD">
+            class="itemD" id="itemDestaque">
             <img id="imagemDestaque" src="./img/ssSk.svg"></img>
             <h3 class="title">PC GAMER</h3>
             <p class="description">Computador de alto desempenho</p>
@@ -127,7 +130,7 @@
             <img src="./imagens/qrcode.png" class="qrcodeFooter">
         </div>
     </div>
-    <div>
+    <footer>
         <form class="allSocialBtn">
             <button class="buttonSocial">
                 <img src="./imagens/FACEBOOK.png" class="imagemSocial">
@@ -147,6 +150,7 @@
 
         </form>
 
-    </div>
+    </footer>
 </body>
+
 </html>
