--- a/login.html
+++ b/login.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./CSS/stylesLogin.css">
+    <title>GM - Login</title>
+
 </head>
-<body>
-    
+
+<body class="body">
+    <header class="header">
+        <img src="./imagens/LOGO.svg" class="header">
+    </header>
+    <main class="main">
+        <div>
+            <h1 class="loginTitleMsg">Login.</h1>
+            <p class="loginMsg">Entre em sua conta utilizando seus dados de usuario e senha</p>
+        </div>
+        <div class="divInput">
+            <p class="loginMsg" >Usuário.</p>
+            <input type="text" name="user" id="userInput" class="input" placeholder="Usuario">
+            <p class="loginMsg">Senha.</p>
+            <input type="password" name="pass" id="passInput" class="input" placeholder="Senha">
+            <button class="entrar" type="submit" formaction="index.html">
+                <a class="hrefbutton" href="index.html">Entrar</a>
+            </button>
+        </div>
+        <div class="cliente">
+            <img src="./imagens/foto do cliente pos compra.png" class="foto_cliente">
+            <div class="textCliente">
+                <h2 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Cliente pós compra.</h2>
+                <p >nossos clientes são mais felizes com as compras realizadas aqui.</p>
+            </div>
+        </div>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
